--- a/engines/attendance/app/views/attendance/dependents/edit.html.haml
+++ b/engines/attendance/app/views/attendance/dependents/edit.html.haml
@@ -1,9 +1,9 @@
 .ui.grid
   .one.wide.mobile.column
-    %a{href: "#{new_ticket_path}"}
+    %a{href: "#{ticket_dependents_path(@ticket)}"}
       %i.big.arrow.left.icon
   .thirteen.wide.mobile.column.text-center
-    .title-header Atualização de renda
+    .title-header Editar dependente
     .sub-title frase
 
 .big-divider
@@ -15,5 +15,5 @@
           %h2 Dados #{@action.situation.name.pluralize}
         %p
           %i.icon.checkmark.huge.green
-    = render 'form'
+    = render 'edit_form'
     
