--- a/engines/attendance/app/views/attendance/contacts/_form.html.haml
+++ b/engines/attendance/app/views/attendance/contacts/_form.html.haml
@@ -1,12 +1,12 @@
 = simple_form_for @cadastre_mirror, url: @ticket.input_disabled?(@action) ? "#" : ticket_contact_path(@ticket, @cadastre_mirror), method: :put, validate: true do |f|
-  = f.input :telephone, input_html: { class: 'phone'}
-  = f.input :telephone_optional, input_html: { class: 'phone'}
-  = f.input :celphone, input_html: { class: 'phone'}
-  = f.input :email
-  = f.input :address
-  = f.association :city, include_blank: false, collection: Core::Address::City.federal_district
-  = f.association :state, include_blank: false, label_method: :acronym
-  = f.input :cep, input_html: { class: 'cep'}
+  = f.input :telephone, input_html: { class: 'phone', disabled: @ticket.input_disabled?(@action) }
+  = f.input :telephone_optional, input_html: { class: 'phone',  disabled: @ticket.input_disabled?(@action) }
+  = f.input :celphone, input_html: { class: 'phone', disabled: @ticket.input_disabled?(@action) }
+  = f.input :email, input_html: { disabled: @ticket.input_disabled?(@action) }
+  = f.input :address, input_html: { disabled: @ticket.input_disabled?(@action) }
+  = f.association :city, include_blank: false, collection: Core::Address::City.federal_district, input_html: { disabled: @ticket.input_disabled?(@action) }
+  = f.association :state, include_blank: false, label_method: :acronym, input_html: { disabled: @ticket.input_disabled?(@action) }
+  = f.input :cep, input_html: { class: 'cep',disabled: @ticket.input_disabled?(@action)}
   .big-divider
   .column.text-center
     - if @ticket.confirmation_required?(@action)
