--- a/engines/attendance/app/views/attendance/contacts/edit.html.haml
+++ b/engines/attendance/app/views/attendance/contacts/edit.html.haml
@@ -9,4 +9,11 @@
 .big-divider
 .ui.grid.container
   .column.content-form
+    - if @ticket.closed?(@action)
+      .text-center
+        %p 
+          %h2 Dados #{@action.situation.name.pluralize}
+        %p
+          %i.icon.checkmark.huge.green
+      .big-divider
     = render 'form'    
