--- a/engines/attendance/app/views/attendance/documents/_form.html.haml
+++ b/engines/attendance/app/views/attendance/documents/_form.html.haml
@@ -1,4 +1,4 @@
-= simple_form_for @action, url: ticket_action_documents_path(@ticket, @action), multipart: true, method: :put,  html: {id: 'file-validation'} do |f|
+= simple_form_for @action, url: ticket_action_documents_path(@ticket, @action), multipart: true, method: :post,  html: {id: 'file-validation'} do |f|
   
   - @service.documents.each do |document|
     - if f.object.send(document.target_method).any?
