--- a/engines/candidate/app/views/candidate/home/show.html.haml
+++ b/engines/candidate/app/views/candidate/home/show.html.haml
@@ -1,7 +1,6 @@
 .ui.grid.container
   .column{style: 'width: 25%'}
-    = link_to image_tag('/images/no-avatar.jpg', class: 'ui mini circular image big-yellow-border'), cadastre_path(current_cadastre)
-  .column{style: 'width: 75%'}
+    = link_to image_tag('/images/no-avatar.jpg', class: 'ui mini circular image big-yellow-border'), cadastre_path(current_cadastre), style:"width:60px!important; height:60px!important;"
     .title-header
       #{current_cadastre.hello}
       %p.mini-text
@@ -9,8 +8,6 @@
       %p
         %span.ui.label.yellow.mini.font-black
           #{current_cadastre.current_situation_name}
-
-
 .row
   .column.wide.four
     .big-divider
