--- a/engines/candidate/app/views/candidate/cadastres/show.html.haml
+++ b/engines/candidate/app/views/candidate/cadastres/show.html.haml
@@ -5,11 +5,11 @@
     %br/
     .title-header
       = current_cadastre.name.mb_chars.upcase
-    %small
+    %medium
       = current_cadastre.current_situation_name
     - current_cadastre.list.each do |list|
       %br
-      %small
+      %medium
         = "#{I18n.t(list[0])} -"
         = "Faixa: #{list[1][0]}"
         = "- Posição: #{list[2]}" if list[2].present?
