--- a/engines/attendance/app/views/attendance/requeriments/index.html.haml
+++ b/engines/attendance/app/views/attendance/requeriments/index.html.haml
@@ -41,4 +41,4 @@
 
 .ui.grid.container-fluid
   .column
-    = link_to "Enviar novo requerimento", new_requeriment_path, class: 'ui button yellow fluid' if @requeriments.where.not(finalized: true).count > 4
+    = link_to "Enviar novo requerimento", new_requeriment_path, class: 'ui button yellow fluid' if @requeriments.where(finalized: false).count < 4
