Changes css and add message on ticket

--- a/engines/attendance/app/views/attendance/notifications/index.html.haml
+++ b/engines/attendance/app/views/attendance/notifications/index.html.haml
@@ -16,6 +16,6 @@
                 %i.small.user.icon.gray
                 .content
                   %a{href: "#{notification_path(notification)}"}
-                    #{notification.title}
+                    #{notification.title.humanize}
                   .sub.header
                     #{notification.created_at.strftime("%d/%m/%Y - %H:%M")}
