--- a/engines/candidate/app/views/candidate/home/show.html.haml
+++ b/engines/candidate/app/views/candidate/home/show.html.haml
@@ -28,21 +28,21 @@
     .column
       .ui.segment.text-center
         %a{href: "#{attendance.new_ticket_path(context_id: 5)}"}
-          %i.icon.edit.huge.yellow
+          %i.icon.edit.huge
       .text-center
         Atualizar Meus Dados
   - if @ticket_policy.allow_regularization_update?
     .column
       .ui.segment.text-center
         %a{href: "#{attendance.new_ticket_path(context_id: 4)}"}
-          %i.icon.edit.huge.yellow
+          %i.icon.edit.huge
       .text-center
         Atualizar Meus Dados
   - if @ticket_policy.allow_able_update?
     .column
       .ui.segment.text-center
         %a{href: "#{attendance.new_ticket_path(context_id: 3)}"}
-          %i.icon.edit.huge.yellow
+          %i.icon.edit.huge
       .text-center
         Atualizar Meus Dados
   - if @ticket_policy.allow_recadastre_update?
