--- a/engines/candidate/app/views/candidate/cadastres/detail.html.haml
+++ b/engines/candidate/app/views/candidate/cadastres/detail.html.haml
@@ -1,5 +1,5 @@
 .ui.grid
-  .one.wide.mobile.column
+  .two.wide.mobile.column
     %a{href: "#{candidate.cadastre_path(@cadastre.id)}"}
       %i.big.arrow.left.icon
   .thirteen.wide.mobile.column.text-center
