--- a/engines/attendance/app/views/attendance/chats/_form.html.haml
+++ b/engines/attendance/app/views/attendance/chats/_form.html.haml
@@ -3,6 +3,7 @@
   = f.association :chat_category, label: false, prompt: 'Selecione'
   = f.simple_fields_for :chat_comments do |b|
     = b.input :content, as: :text, label: false, input_html: { placeholder: 'Escreva aqui', rows: 3}
+    = b.input :upload, as: :file, label: false, input_html: { onchange: 'validate_file(this);', class: 'inline'}
   .big-divider
   .column.text-center
     = f.submit "Enviar", class: 'ui button yellow'
