--- a/engines/attendance/app/views/attendance/requeriments/_digital_document_fields.html.haml
+++ b/engines/attendance/app/views/attendance/requeriments/_digital_document_fields.html.haml
@@ -3,7 +3,7 @@
     %label.button-file-upload.ui.button.mini.gray
       %span
         Toque para inserir um documento
-      = f.input :doc_path, as: :file, label: false, input_html: { onchange: 'validate_file(this);', class: 'inline'}
+      = f.input :doc_path, as: :file, label: false, multiple: true, input_html: { onchange: 'validate_file(this);', class: 'inline'}
     = f.hidden_field :_destroy
     = link_to "<i class='remove icon'></i>".html_safe, '#', class: "remove_fields ui button black icon mini inline"
 .divider
