--- a/engines/candidate/app/views/candidate/home/show.html.haml
+++ b/engines/candidate/app/views/candidate/home/show.html.haml
@@ -56,7 +56,7 @@
     .column
       .ui.segment.text-center
         %a{href: "#{attendance.new_ticket_path(context_id: 2)}"}
-          %i.icon.checkmark.huge.yellow
+          %i.icon.checkmark.huge
       .text-center
         Habilitação
   .column
