--- a/engines/attendance/app/views/attendance/cadastres/_form.html.haml
+++ b/engines/attendance/app/views/attendance/cadastres/_form.html.haml
@@ -14,6 +14,7 @@
   = f.input :nis, input_html: { disabled: @ticket.input_disabled?(@action) }
   = f.input :cid, input_html: { disabled: @ticket.input_disabled?(@action) }
   = f.input :adapted_property, as: :select, include_blank: false, input_html: { disabled: @ticket.input_disabled?(@action) }
+  = f.input :arrival_df, as: :string, include_blank: false, input_html: { disabled: @ticket.input_disabled?(@action) , class: 'date'}
   
   .big-divider
   .column.text-center
