--- a/engines/attendance/app/views/attendance/documents/_document_fields.html.haml
+++ b/engines/attendance/app/views/attendance/documents/_document_fields.html.haml
@@ -1,9 +1,19 @@
 %fieldset
   - if f.object.document_url.to_s.present?
-    %p
-      %b= link_to "Toque para visualizar o documento", f.object.document_url.to_s, target: '_blank'
+    %small
+      %p{style: 'margin-bottom: 0'}
+        %b
+          %i= f.object.target_indentify
+
+    %small
+      %p
+        %b= link_to "Toque para visualizar o documento", f.object.document_url.to_s, target: '_blank'
+  - else
+    %p{style: 'margin-bottom: 0'}
+      %b
+        %i= f.object.target_indentify
   .ui.buttons
-    %label.button-file-upload.ui.button.mini{class: f.object.document? ? 'green' : 'gray'}
+    %label.button-file-upload.ui.button.fluid.mini{class: f.object.document? ? 'green' : 'gray'}
       - if f.object.document_url.to_s.present?
         %span
           Toque para modificar o documento
@@ -11,7 +21,9 @@
         %span
           Toque para inserir um documento
 
-      = f.input :document, as: :file, label: false, input_html: { onchange: 'validate_file(this);', class: "inline"}
+      = f.input :document, as: :file, label: false, input_html: { onchange: 'validate_file(this);', class: "inline", data: { destroy: f.object.disable_destroy }}
+    = f.input :target_id, as: :hidden
+    = f.input :target_model, as: :hidden
     = f.hidden_field :_destroy
-    = link_to "<i class='remove icon'></i>".html_safe, '#', class: "remove_fields ui button black icon mini inline #{f.object.disable_destroy ? 'disabled' : ''}"
+    = link_to "<i class='remove icon'></i>".html_safe, '#', class: "remove_fields ui button black icon inline #{f.object.disable_destroy ? 'disabled' : ''}"
 .divider
