--- a/engines/attendance/app/views/attendance/documents/_form.html.haml
+++ b/engines/attendance/app/views/attendance/documents/_form.html.haml
@@ -4,7 +4,7 @@
     - if f.object.send(document.target_method).any?
       .column 
         %label 
-          %b= document.name.humanize
+          %h4= document.name.humanize
       .divider
       .column 
         = f.fields_for document.target_method do |builder|
