--- a/engines/attendance/app/views/attendance/incomes/_form.html.haml
+++ b/engines/attendance/app/views/attendance/incomes/_form.html.haml
@@ -2,7 +2,7 @@
   = f.input :main_income, input_html: { class: 'coin', disabled: @ticket.input_disabled?(@action)}
 
   = f.simple_fields_for :dependent_mirrors do |nested|
-    %b= nested.label nested.object.name.titleize 
+    %b= nested.label nested.object.name rescue "Sem nome"
     = nested.input :income, label: false, input_html: { class: 'coin', disabled: @ticket.input_disabled?(@action) }
 
   .big-divider
