--- a/engines/candidate/app/views/candidate/cadastres/detail.html.haml
+++ b/engines/candidate/app/views/candidate/cadastres/detail.html.haml
@@ -6,7 +6,7 @@
     .title-header
       Meu Cadastro
 .big.divider
-.ui.container
+.ui.no_container
   %table.ui.celled.table
     %thead
       %tr
