--- a/engines/candidate/app/views/candidate/cadastres/indication.html.haml
+++ b/engines/candidate/app/views/candidate/cadastres/indication.html.haml
@@ -8,12 +8,12 @@
 .big.divider
 .ui.container
   - if @indications.present?
-    - @indications.order(created_at: :desc).each do |indication|
+    - @indications.order(created_at: :desc).each_with_index do |indication, i|
       .ui.styled.accordion
-        .title
+        %div{ class: i == 0 ? 'title active' : 'title'}
           %i.dropdown.icon
           = indication.enterprise.name rescue nil
-        .content
+        %div{ class: i == 0 ? 'content active' : 'content'}
           %table.ui.celled.table
             %tbody
               %tr
