--- a/engines/candidate/app/views/candidate/cadastres/schedule.html.haml
+++ b/engines/candidate/app/views/candidate/cadastres/schedule.html.haml
@@ -8,12 +8,12 @@
 .big.divider
 .ui.container
   - if @schedules.present?
-    - @schedules.order('created_at desc').each do |schedule|
+    - @schedules.order('created_at desc').each_with_index do |schedule, i|
       .ui.styled.accordion
-        .title
+        %div{ class: i == 0 ? 'title active' : 'title'}
           %i.dropdown.icon
           = "Data agendada: #{schedule.date.strftime('%d/%m/%Y') rescue nil}"
-        .content
+        %div{ class: i == 0 ? 'content active' : 'content'}
           %table.ui.celled.table
             %tbody
               %tr
