fix details chat

--- a/engines/attendance/app/views/attendance/chat_comments/_form.html.haml
+++ b/engines/attendance/app/views/attendance/chat_comments/_form.html.haml
@@ -5,5 +5,4 @@
   = link_to_add_fields "Adicionar arquivo", f, :chat_uploads
   .big-divider
   .column.text-center
-    = f.submit "Enviar", class: 'ui button yellow'
-    = link_to "Cancelar", chats_path, class: 'ui button gray' if @chat.chat_comments.count > 0
+    = f.submit "Enviar", class: 'ui button yellow fluid'
