--- a/engines/attendance/app/views/attendance/chats/_form.html.haml
+++ b/engines/attendance/app/views/attendance/chats/_form.html.haml
@@ -3,5 +3,4 @@
   = f.association :chat_category, label: false, prompt: 'Selecione'
   .big-divider
   .column.text-center
-    = f.submit "Enviar", class: 'ui button yellow'
-    = link_to "Cancelar", chats_path, class: 'ui button gray'
+    = f.submit "Prosseguir", class: 'ui button yellow fluid'
