--- a/engines/attendance/app/views/attendance/documents/_form.html.haml
+++ b/engines/attendance/app/views/attendance/documents/_form.html.haml
@@ -7,15 +7,20 @@
           %h4= document.name.humanize
       .divider
       .column 
-        = f.fields_for document.target_method do |builder|
-          = render 'document_fields', f: builder, d: document
-        = link_to_add_upload_fields "Adicionar arquivo", f, document.target_method
+        - if [2, 3].include? @action.context_id
+          = f.fields_for document.target_method, @action.send(document.target_method).reject(&:persisted?) do |builder|
+            = render 'document_fields', f: builder, d: document
+          = link_to_add_upload_fields "Adicionar arquivo", f, document.target_method, session[:dependent_id], 'Core::Candidate::DependentMirror'
+        - else
+          = f.fields_for document.target_method do |builder|
+            = render 'document_fields', f: builder, d: document
+          = link_to_add_upload_fields "Adicionar arquivo", f, document.target_method
       %hr/
 
   - if @ticket.document_required?(@action)
-    = f.submit "Enviar documentação", class: 'ui button green fluid disabled'
+    = f.submit "Enviar documentação", class: 'ui button green fluid disabled', data: { disable_with: 'Processando, aguarde...' } 
   - else
     .text-center
       %h3 Nenhum documento necessário.
     .big-divider
-    = f.submit "Confirmar atualizações", class: 'ui button green fluid'
+    = f.submit "Confirmar atualizações", class: 'ui button green fluid', data: { disable_with: 'Processando, aguarde...' } 
