--- a/engines/attendance/app/views/attendance/incomes/_form.html.haml
+++ b/engines/attendance/app/views/attendance/incomes/_form.html.haml
@@ -1,4 +1,4 @@
-= simple_form_for @cadastre_mirror, url: @ticket.input_disabled?(@action) ? "#" : ticket_income_path(@ticket, @cadastre_mirror), method: :put, validate: true do |f|
+= simple_form_for @cadastre_mirror, url: ticket_income_path(ticket_id: @ticket, id: @cadastre_mirror, dependent: @dependent), method: :put, validate: true do |f|
   = f.input :main_income, input_html: { class: 'coin', disabled: @ticket.input_disabled?(@action)}
 
   = f.simple_fields_for :dependent_mirrors do |nested|
