--- a/engines/attendance/app/views/attendance/tickets/show.html.haml
+++ b/engines/attendance/app/views/attendance/tickets/show.html.haml
@@ -11,13 +11,12 @@
       %tr
         %th 
           %h3 Protocolo: #{@ticket.protocol}
-        %th
-          %h4 #{@ticket.context.name.humanize}
     %tbody
       %tr
         %td
           %h4.ui.image.header
             .content
+              %h4 #{@ticket.context.name.humanize}
               Situação da atualização
               .sub.header
                 #{@ticket.situation.external_name}
@@ -27,7 +26,7 @@
 
   - @ticket.actions.each do |action|
     .ui.raised.segment
-      %a.ui.blue.ribbon.label #{action.context.name.humanize}
+      %a.ui.yellow.ribbon.label #{action.context.name.humanize}
       %p
         %small
           Criado em #{action.created_at.strftime("%d/%m/%Y - %H:%M")}
