Protocol and avatar.jpg

--- a/engines/candidate/app/views/candidate/cadastres/show.html.haml
+++ b/engines/candidate/app/views/candidate/cadastres/show.html.haml
@@ -1,7 +1,7 @@
 .huge-divider
 .ui.grid.container
   .column.center.aligned
-    = link_to image_tag('/images/no-avatar.jpg', class: 'ui mini circular image small-yellow-border', style: 'width: 120px!important; height:120px; overflow:hidden; margin: 0 auto'), "#"
+    = link_to image_tag('/sample/avatar.jpg', class: 'ui mini circular image small-yellow-border', style: 'width: 120px!important; height:120px; overflow:hidden; margin: 0 auto'), "#"
     %br/
     .title-header
       = current_cadastre.name.mb_chars.upcase
