--- a/engines/candidate/app/views/candidate/home/show.html.haml
+++ b/engines/candidate/app/views/candidate/home/show.html.haml
@@ -1,6 +1,6 @@
 .ui.grid.container
   .column{style: 'width: 25%'}
-    = link_to image_tag('/images/no-avatar.jpg', class: 'ui mini circular image big-yellow-border custom-avatar-tiny '), cadastre_path(current_cadastre)
+    = link_to image_tag('/sample/avatar.jpg', class: 'ui mini circular image big-yellow-border custom-avatar-tiny '), cadastre_path(current_cadastre)
   .column{style: 'width: 75%'}
     .title-header
       #{current_cadastre.hello}
