--- a/engines/candidate/app/views/candidate/home/show.html.haml
+++ b/engines/candidate/app/views/candidate/home/show.html.haml
@@ -1,6 +1,9 @@
 .ui.grid.container
   .column{style: 'width: 25%'}
-    = link_to image_tag('/sample/avatar.jpg', class: 'ui mini circular image big-yellow-border custom-avatar-tiny '), cadastre_path(current_cadastre)
+    - if current_cadastre.avatar?
+      = link_to image_tag("#{current_cadastre.avatar_url}", class: 'ui mini circular image big-yellow-border custom-avatar-tiny '), cadastre_path(current_cadastre)
+    - else
+      = link_to image_tag('http://www.codhab.df.gov.br/sample/avatar.jpg', class: 'ui mini circular image big-yellow-border custom-avatar-tiny '), cadastre_path(current_cadastre)
   .column{style: 'width: 75%'}
     .title-header
       #{current_cadastre.hello}
