--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -7,8 +7,8 @@
     %title Codhab
     %link{href: "https://fonts.googleapis.com/css?family=Nunito+Sans", rel: "stylesheet"}
     = csrf_meta_tags
-    = stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload'
-    = javascript_include_tag 'application', 'data-turbolinks-track': 'reload'
+    = stylesheet_link_tag    'application', media: 'all'
+    = javascript_include_tag 'application'
   %body
     .ui.container-fluid#animate.mega-margin
       = yield
